--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -64,9 +64,7 @@
     "On a classical computer the cost of $C(z)$ for the current evaluation is evaluated.\n",
     "Either the process is terminated if the termination condition is met ($C(z)$ is sufficiently low), or the paramters $\\gamma$ and $\\beta$ are optimized classically.\n",
     "\n",
-    "$-2\\pi\\lt\\gamma\\lt2\\pi$ and $-\\pi\\lt\\beta\\lt\\pi$\n",
-    "\n",
-    "**TODO: check factor 2 in circuit**\n"
+    "$-2\\pi\\lt\\gamma\\lt2\\pi$ and $-\\pi\\lt\\beta\\lt\\pi$\n"
    ]
   },
   {
@@ -195,11 +193,7 @@
    "id": "ba8b0ab6",
    "metadata": {},
    "source": [
-    "Clauses on one qubits are then translated into $R_z$ rotations and clauses on two qubits are translated into the symmetric $R_{zz}$ gate.\n",
-    "\n",
-    "**TODO: explain / understand $R_{zz}$**\n",
-    "\n",
-    "**TODO: normalization**"
+    "Clauses on one qubits are then translated into $R_z$ rotations and clauses on two qubits are translated into the symmetric $R_{zz}$ gate."
    ]
   },
   {
@@ -639,15 +633,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9 (XPython)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "xpython"
+   "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.14"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
