improve pyplot highlighting

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -83,6 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "# Notebook Setup\n",
     "from IPython.core import page\n",
     "page.page = print\n",
@@ -615,19 +616,34 @@
    "source": [
     "# Pretty Print the results of the previous Cell\n",
     "\n",
-    "histogram_figure = plot_histogram(counts, figsize=(40, 10))\n",
-    "\n",
     "best_config = \"000110\" # 654321\n",
     "valid_configs = [\"101010\", \"101001\", \"101011\", \"100110\", \"100101\", \"100111\", \"001010\", \"001001\", \"001011\", \"000101\", \"000111\", \"111010\", \"111001\", \"111011\", \"110110\", \"110101\", \"110111\"]\n",
     "\n",
-    "ax = histogram_figure.axes[0] # get x axis\n",
-    "for xtick in ax.get_xticklabels():\n",
-    "    if xtick.get_text() == best_config:\n",
-    "        xtick.set_color('r')\n",
-    "    if xtick.get_text() in valid_configs:\n",
-    "        xtick.set_color(\"brown\")\n",
-    "        \n",
-    "histogram_figure"
+    "col = []\n",
+    "for key in counts.keys():\n",
+    "    if key==best_config:\n",
+    "        col.append('r')\n",
+    "    elif valid_configs.__contains__(key):\n",
+    "        col.append(\"brown\")\n",
+    "    else:\n",
+    "        col.append('b')\n",
+    "\n",
+    "plt.rcParams[\"figure.figsize\"] = (40,10)\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.xticks(rotation=70, ha=\"right\")\n",
+    "plt.bar(counts.keys(), counts.values(), width=0.5, color=col)\n",
+    "\n",
+    "max_count = 0\n",
+    "for val in counts.values():\n",
+    "    if val > max_count:\n",
+    "        max_count = val\n",
+    "\n",
+    "for i, val in enumerate(counts.values()):\n",
+    "    plt.text(x=i, y=val+max_count/100, s=f\"{val}\", fontdict=dict(fontsize=10), horizontalalignment=\"center\")\n",
+    "\n",
+    "plt.axhline(y=max_count, color='r', linestyle='--')\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
@@ -647,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
