--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -44,25 +44,25 @@
     "- $m$ clauses\n",
     "- objective function $C(z)$\n",
     "\n",
-    "The domain of the problem is unconstraind, thus the algorithms goal is to find an (almost) optimal bistring $z=z_1...z_n$\n",
+    "The domain of the problem is unconstrained, thus the algorithms goal is to find an (almost) optimal bistring $z=z_1...z_n$\n",
     "\n",
     "It refines VQA and uses the Alternating Operator Ansatz.\n",
-    "The algorithm constists of a classical and quantum part.\n",
+    "The algorithm consists of a classical and quantum part.\n",
     "\n",
     "On a quantum computer a circuit is constructed which is parameterized by $\\gamma$ and $\\beta$.\n",
-    "Intially the unform superposition state $H^{\\otimes n}$ is prepared.\n",
+    "Initially the uniform superposition state $H^{\\otimes n}$ is prepared.\n",
     "\n",
     "Two operators $U(C,\\gamma)$ and $U(B,\\beta)$ are constructed.\n",
     "The phase-separating operator $U(C,\\gamma)$ encodes $C$  and applies a phase shift $e^{-i\\gamma}$ on every computational basis state for every clause that is fulfilled.\n",
-    "The mixing operator $U(B, \\beta)$ changes the amplitude of solutions useing rotation $R_x$.\n",
+    "The mixing operator $U(B, \\beta)$ changes the amplitude of solutions using rotation $R_x$.\n",
     "\n",
-    "Both $U(C,\\gamma)$  and $U(B,\\beta)$ are then applied $p$ times according to the hyper-paramter $p \\in \\mathbf{N}$.\n",
+    "Both $U(C,\\gamma)$  and $U(B,\\beta)$ are then applied $p$ times according to the hyper-parameter $p \\in \\mathbf{N}$.\n",
     "Finally measurements gates are added.\n",
     "\n",
-    "The circuit has a shallow cicuit depth of at most $mp+m$.\n",
+    "The circuit has a shallow circuit depth of at most $mp+m$.\n",
     "\n",
     "On a classical computer the cost of $C(z)$ for the current evaluation is evaluated.\n",
-    "Either the process is terminated if the termination condition is met ($C(z)$ is sufficiently low), or the paramters $\\gamma$ and $\\beta$ are optimized classically.\n",
+    "Either the process is terminated if the termination condition is met ($C(z)$ is sufficiently low), or the parameters $\\gamma$ and $\\beta$ are optimized classically.\n",
     "\n",
     "$-2\\pi\\lt\\gamma\\lt2\\pi$ and $-\\pi\\lt\\beta\\lt\\pi$\n"
    ]
@@ -166,7 +166,7 @@
     "### Phase-separating operator\n",
     "The phase-separating operator $U(C,\\gamma)$ encodes $C$ and can be derived from a cost Hamiltonian $H_{Ctot}$ in Ising-form. \n",
     "We can describe $H_{Ctot}$ in a form where for $m$ clauses operating on one or two qubits (because the domain is unconstrained) the values of $C$ are encoded.\n",
-    "We later describe how such a Hamilonian can be constructed for our concrete problem class."
+    "We later describe how such a Hamiltonian can be constructed for our concrete problem class."
    ]
   },
   {
@@ -229,7 +229,7 @@
     "### QAOA circuit\n",
     "Now we can create a QAOA circuit for a problem hamiltonian.\n",
     "\n",
-    "The circuit can also be warmstarted by intializing a specific state $\\ket{s}$ instead of a uniform superposition."
+    "The circuit can also be warmstarted by initializing a specific state $\\ket{s}$ instead of a uniform superposition."
    ]
   },
   {
@@ -438,7 +438,7 @@
    "id": "a1aae270",
    "metadata": {},
    "source": [
-    "We can also define the SAT ($H_C$) and cost ($H_{Ck}$) Hamiltonians separatly and combine them afterwards."
+    "We can also define the SAT ($H_C$) and cost ($H_{Ck}$) Hamiltonians separately and combine them afterwards."
    ]
   },
   {
@@ -500,7 +500,7 @@
    "metadata": {},
    "source": [
     "As the circuit is executed multiple times the function `compute_hamiltonian_energy` can be used with different strategies.\n",
-    "Currently we provide average, top and minimum strategies and the best one to use is TBD."
+    "Currently, we provide average, top and minimum strategies and the best one to use is TBD."
    ]
   },
   {
@@ -524,7 +524,7 @@
    "source": [
     "We can then define a function that given a beta and gamma as input creates a quantum circuit, executes it multiple times and returns the energy.\n",
     "\n",
-    "This function can be used in a classical optimzer."
+    "This function can be used in a classical optimizer."
    ]
   },
   {
@@ -544,7 +544,7 @@
    "metadata": {},
    "source": [
     "## Applying QAOA\n",
-    "Finally we can run the whole algorithm for a specific problem Hamiltonian."
+    "Finally, we can run the whole algorithm for a specific problem Hamiltonian."
    ]
   },
   {
