Initial plot setup

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -236,7 +236,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c2969e03",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# QAOA Circuit\n",
@@ -536,6 +538,33 @@
    "source": [
     "from qaoa_mincost_sat import get_expectation\n",
     "%psource get_expectation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "967e6e00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot cost landscape for different values of beta and gamma\n",
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "plt.rcParams[\"figure.figsize\"] = (5,5)\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "cmap = \"viridis\"\n",
+    "plt.xlabel(r\"$\\beta$\")\n",
+    "plt.ylabel(r\"$\\gamma$\")\n",
+    "\n",
+    "ax.set_ylim(-2 * math.pi, 2 * math.pi)\n",
+    "ax.set_xlim(-math.pi, math.pi)\n",
+    "\n",
+    "pcm = ax.pcolormesh(np.random.random((20, 20)), shading=\"gouraud\", cmap=cmap)\n",
+    "fig.colorbar(pcm, ax=ax)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
