Add plot for different beta and gamma

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -236,9 +236,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c2969e03",
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# QAOA Circuit\n",
@@ -550,18 +548,48 @@
     "# Plot cost landscape for different values of beta and gamma\n",
     "import math\n",
     "import numpy as np\n",
+    "from qiskit import Aer\n",
+    "import sys\n",
     "\n",
-    "plt.rcParams[\"figure.figsize\"] = (5,5)\n",
+    "resolution = 0.1\n",
+    "shots = 2000\n",
+    "hamiltonian = combined_hamiltonian\n",
+    "x_axis = np.arange(-math.pi, math.pi, resolution)\n",
+    "y_axis = np.arange(-2 * math.pi, 2 * math.pi, 2 * resolution)\n",
+    "expectation = np.zeros(shape = (len(x_axis), len(y_axis)))\n",
+    "\n",
+    "backend = Aer.get_backend('qasm_simulator')\n",
+    "backend.shots = shots\n",
+    "\n",
+    "expectation_max = -sys.maxsize - 1\n",
+    "expectation_min = sys.maxsize\n",
+    "\n",
+    "for i_index, i in enumerate(x_axis):\n",
+    "    for j_index, j in enumerate(y_axis):\n",
+    "        qc, beta, gamma = qaoa_circuit(hamiltonian, 6, 1)\n",
+    "\n",
+    "        qc = qc.bind_parameters({\n",
+    "            beta: i,\n",
+    "            gamma: j\n",
+    "        })\n",
+    "\n",
+    "        counts = backend.run(qc, nshots=shots).result().get_counts()\n",
+    "        value = np.log(compute_hamiltonian_energy(hamiltonian, counts, strategy='avg')) / 6\n",
+    "        expectation[i_index][j_index] = value\n",
+    "\n",
+    "        if expectation_max < value:\n",
+    "            expectation_max = value\n",
+    "        elif expectation_min > value:\n",
+    "            expectation_min = value\n",
+    "\n",
+    "plt.rcParams[\"figure.figsize\"] = (6,5)\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "cmap = \"viridis\"\n",
     "plt.xlabel(r\"$\\beta$\")\n",
     "plt.ylabel(r\"$\\gamma$\")\n",
     "\n",
-    "ax.set_ylim(-2 * math.pi, 2 * math.pi)\n",
-    "ax.set_xlim(-math.pi, math.pi)\n",
-    "\n",
-    "pcm = ax.pcolormesh(np.random.random((20, 20)), shading=\"gouraud\", cmap=cmap)\n",
+    "pcm = ax.pcolormesh(x_axis, y_axis, expectation, shading=\"gouraud\", cmap=cmap, vmin=expectation_min, vmax=expectation_max)\n",
     "fig.colorbar(pcm, ax=ax)\n",
     "\n",
     "plt.show()"
@@ -698,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
