--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -548,33 +548,24 @@
     "# Plot cost landscape for different values of beta and gamma\n",
     "import math\n",
     "import numpy as np\n",
-    "from qiskit import Aer\n",
     "import sys\n",
     "\n",
-    "resolution = 0.1\n",
-    "shots = 2000\n",
+    "resolution = 0.2\n",
+    "shots = 2048\n",
     "hamiltonian = combined_hamiltonian\n",
     "x_axis = np.arange(-math.pi, math.pi, resolution)\n",
     "y_axis = np.arange(-2 * math.pi, 2 * math.pi, 2 * resolution)\n",
     "expectation = np.zeros(shape = (len(x_axis), len(y_axis)))\n",
     "\n",
-    "backend = Aer.get_backend('qasm_simulator')\n",
-    "backend.shots = shots\n",
-    "\n",
     "expectation_max = -sys.maxsize - 1\n",
     "expectation_min = sys.maxsize\n",
     "\n",
     "for i_index, i in enumerate(x_axis):\n",
-    "    for j_index, j in enumerate(y_axis):\n",
-    "        qc, beta, gamma = qaoa_circuit(hamiltonian, 6, 1)\n",
+    "    for j_index,j in enumerate(y_axis):\n",
+    "        theta = [i, j]\n",
+    "        expectation_function = get_expectation(hamiltonian, 6, 20, shots)\n",
+    "        value = np.log(expectation_function(theta)) / 6\n",
     "\n",
-    "        qc = qc.bind_parameters({\n",
-    "            beta: i,\n",
-    "            gamma: j\n",
-    "        })\n",
-    "\n",
-    "        counts = backend.run(qc, nshots=shots).result().get_counts()\n",
-    "        value = np.log(compute_hamiltonian_energy(hamiltonian, counts, strategy='avg')) / 6\n",
     "        expectation[i_index][j_index] = value\n",
     "\n",
     "        if expectation_max < value:\n",
