Add histogram sorting

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -620,8 +620,13 @@
     "best_config = \"000110\" # 654321\n",
     "valid_configs = [\"101010\", \"101001\", \"101011\", \"100110\", \"100101\", \"100111\", \"001010\", \"001001\", \"001011\", \"000101\", \"000111\", \"111010\", \"111001\", \"111011\", \"110110\", \"110101\", \"110111\"]\n",
     "\n",
+    "# Sort histogram\n",
+    "sortedKeys = sorted(counts.keys())\n",
+    "sortedItems = sorted(counts.items(), key=lambda item: item[0])\n",
+    "sortedValues = [item[1] for item in sortedItems]\n",
+    "\n",
     "col = []\n",
-    "for key in counts.keys():\n",
+    "for key in sortedKeys:\n",
     "    if key==best_config:\n",
     "        col.append('r')\n",
     "    elif valid_configs.__contains__(key):\n",
@@ -632,17 +637,17 @@
     "plt.rcParams[\"figure.figsize\"] = (40,10)\n",
     "plt.ylabel(\"Count\")\n",
     "plt.xticks(rotation=70, ha=\"right\")\n",
-    "plt.bar(counts.keys(), counts.values(), width=0.5, color=col)\n",
+    "plt.bar(sortedKeys, sortedValues, width=0.5, color=col)\n",
     "\n",
     "max_count = 0\n",
-    "for val in counts.values():\n",
+    "for val in sortedValues:\n",
     "    if val > max_count:\n",
     "        max_count = val\n",
     "\n",
-    "for i, val in enumerate(counts.values()):\n",
+    "for i, val in enumerate(sortedValues):\n",
     "    plt.text(x=i, y=val+max_count/100, s=f\"{val}\", fontdict=dict(fontsize=10), horizontalalignment=\"center\")\n",
     "\n",
-    "plt.axhline(y=max_count, color='r', linestyle='--')\n",
+    "plt.axhline(y=counts[best_config], color='r', linestyle='--')\n",
     "\n",
     "red_patch = mpatches.Patch(color='r', label=\"best config\")\n",
     "brown_patch = mpatches.Patch(color=\"brown\", label=\"valid config\")\n",
@@ -669,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
