Refactor to use StatevectorSimulator instead of QasmSimulator

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -549,23 +549,30 @@
     "import math\n",
     "import numpy as np\n",
     "import sys\n",
+    "from qiskit_aer import StatevectorSimulator\n",
     "\n",
-    "resolution = 0.2\n",
-    "shots = 2048\n",
+    "backend = StatevectorSimulator()\n",
+    "\n",
+    "step_size = 0.1\n",
     "hamiltonian = combined_hamiltonian\n",
-    "x_axis = np.arange(-math.pi, math.pi, resolution)\n",
-    "y_axis = np.arange(-2 * math.pi, 2 * math.pi, 2 * resolution)\n",
-    "expectation = np.zeros(shape = (len(x_axis), len(y_axis)))\n",
+    "x_axis = np.arange(-math.pi, math.pi, step_size)\n",
+    "y_axis = np.arange(-2 * math.pi, 2 * math.pi, 2 * step_size)\n",
+    "expectation = np.zeros(shape=(len(x_axis), len(y_axis)))\n",
     "\n",
     "expectation_max = -sys.maxsize - 1\n",
     "expectation_min = sys.maxsize\n",
     "\n",
     "for i_index, i in enumerate(x_axis):\n",
     "    for j_index,j in enumerate(y_axis):\n",
-    "        theta = [i, j]\n",
-    "        expectation_function = get_expectation(hamiltonian, 6, 20, shots)\n",
-    "        value = np.log(expectation_function(theta)) / 6\n",
+    "        qc, beta, gamma = qaoa_circuit(hamiltonian, 6, 1)\n",
     "\n",
+    "        qc = qc.bind_parameters({\n",
+    "            beta: i,\n",
+    "            gamma: j\n",
+    "        })\n",
+    "\n",
+    "        counts = backend.run(qc).result().get_counts()\n",
+    "        value = compute_hamiltonian_energy(hamiltonian, counts, strategy='min')\n",
     "        expectation[i_index][j_index] = value\n",
     "\n",
     "        if expectation_max < value:\n",
