Fix configs with count = 0 not being included in histogram

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -1326,10 +1326,18 @@
     "best_config = \"000110\" # 654321\n",
     "valid_configs = [\"101010\", \"101001\", \"101011\", \"100110\", \"100101\", \"100111\", \"001010\", \"001001\", \"001011\", \"000101\", \"000111\", \"111010\", \"111001\", \"111011\", \"110110\", \"110101\", \"110111\"]\n",
     "\n",
+    "for i in range(0, 2**6):\n",
+    "    if not counts.keys().__contains__(np.binary_repr(i, 6)):\n",
+    "        counts[np.binary_repr(i, 6)] = 0\n",
+    "\n",
     "# Sort histogram\n",
     "sortedKeys = sorted(counts.keys())\n",
     "sortedItems = sorted(counts.items(), key=lambda item: item[0])\n",
     "sortedValues = [item[1] for item in sortedItems]\n",
+    "\n",
+    "print(sortedKeys)\n",
+    "print(sortedItems)\n",
+    "print(sortedValues)\n",
     "\n",
     "col = []\n",
     "for key in sortedKeys:\n",
