--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -261,7 +261,7 @@
    "metadata": {},
    "source": [
     "### Quantum routine\n",
-    "Executes QAOA circuit an returns circuit and results"
+    "Executes QAOA circuit and returns circuit and results"
    ]
   },
   {
@@ -825,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
