Extract code for visualization into util.visualization

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -83,8 +83,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patches as mpatches\n",
     "# Notebook Setup\n",
     "from IPython.core import page\n",
     "page.page = print\n",
@@ -545,140 +543,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
     "# Plot cost landscape for different values of beta and gamma\n",
-    "import math\n",
-    "import numpy as np\n",
-    "import sys\n",
-    "from qiskit_aer import StatevectorSimulator\n",
-    "from util.hamiltonian_math import compute_hamiltonian_energy_from_statevector\n",
+    "hamiltonians = [{'hamiltonian': sat_hamiltonian, 'name': 'SAT'},\n",
+    "                {'hamiltonian': cost_model.to_quso(), 'name': 'COST'},\n",
+    "                {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
+    "strategies = ['min', 'avg', 'top']\n",
+    "plot_beta_gamma_cost_landscape(hamiltonians, strategies, 6, 0.2)\n",
     "\n",
-    "backend = StatevectorSimulator()\n",
-    "\n",
-    "plot_arguments = [{\"hamiltonian\": sat_hamiltonian, \"strategy\": 'min'},\n",
-    "                  {\"hamiltonian\": sat_hamiltonian, \"strategy\": 'avg'},\n",
-    "                  {\"hamiltonian\": sat_hamiltonian, \"strategy\": 'top'},\n",
-    "                  {\"hamiltonian\": cost_model.to_quso(), \"strategy\": 'min'},\n",
-    "                  {\"hamiltonian\": cost_model.to_quso(), \"strategy\": 'avg'},\n",
-    "                  {\"hamiltonian\": cost_model.to_quso(), \"strategy\": 'top'},\n",
-    "                  {\"hamiltonian\": combined_hamiltonian, \"strategy\": 'min'},\n",
-    "                  {\"hamiltonian\": combined_hamiltonian, \"strategy\": 'avg'},\n",
-    "                  {\"hamiltonian\": combined_hamiltonian, \"strategy\": 'top'}]\n",
-    "\n",
-    "step_size = 0.5\n",
-    "x_axis = np.arange(-math.pi, math.pi, step_size)\n",
-    "y_axis = np.arange(-2 * math.pi, 2 * math.pi, 2 * step_size)\n",
-    "\n",
-    "fig, axes = plt.subplots(3, 3, figsize=(18, 16))\n",
-    "fig.suptitle(r\"cost landscape for different values of $\\gamma$ and $\\beta$\", fontsize=20)\n",
-    "fig.tight_layout(pad=5.0)\n",
-    "cmap = \"viridis\"\n",
-    "\n",
-    "for ax, arguments in zip(axes.ravel(), plot_arguments):\n",
-    "    if arguments[\"hamiltonian\"] == sat_hamiltonian:\n",
-    "        ax.set_title(f\"Hamiltonian: sat\\n strategy: {arguments['strategy']}\")\n",
-    "    elif arguments[\"hamiltonian\"] == cost_model.to_quso():\n",
-    "        ax.set_title(f\"Hamiltonian: cost\\n strategy: {arguments['strategy']}\")\n",
-    "    else:\n",
-    "        ax.set_title(f\"Hamiltonian: combined\\n strategy: {arguments['strategy']}\")\n",
-    "    ax.set_xlabel(r\"$\\beta$\")\n",
-    "    ax.set_ylabel(r\"$\\gamma$\")\n",
-    "\n",
-    "    hamiltonian = arguments[\"hamiltonian\"]\n",
-    "\n",
-    "    expectation = np.zeros(shape=(len(x_axis), len(y_axis)))\n",
-    "    expectation_max = -sys.maxsize - 1\n",
-    "    expectation_min = sys.maxsize\n",
-    "\n",
-    "    for i_index, i in enumerate(x_axis):\n",
-    "        for j_index,j in enumerate(y_axis):\n",
-    "            qc, beta, gamma = qaoa_circuit(hamiltonian, 6, 1, measure=False)\n",
-    "\n",
-    "            qc = qc.bind_parameters({\n",
-    "                beta: i,\n",
-    "                gamma: j\n",
-    "            })\n",
-    "\n",
-    "            result = backend.run(qc).result()\n",
-    "\n",
-    "            statevector = result.get_statevector()\n",
-    "            value = compute_hamiltonian_energy_from_statevector(hamiltonian, statevector, 6, strategy=arguments[\"strategy\"])\n",
-    "            expectation[i_index][j_index] = value\n",
-    "\n",
-    "            if expectation_max < value:\n",
-    "                expectation_max = value\n",
-    "            elif expectation_min > value:\n",
-    "                expectation_min = value\n",
-    "\n",
-    "    pcm = ax.pcolormesh(x_axis, y_axis, expectation, shading=\"gouraud\", cmap=cmap, vmin=expectation_min, vmax=expectation_max)\n",
-    "    plt.colorbar(pcm, ax=ax)\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4471ea54",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Plot cost landscape for different f and mu\n",
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
-    "from scipy.stats import gaussian_kde\n",
-    "from util.hamiltonian_math import compute_config_energy\n",
-    "\n",
-    "nqubits = 6\n",
-    "\n",
-    "# Calculate f(z) using the combined_hamiltonian for each bitstring z\n",
-    "f = np.zeros(shape=(2**nqubits))\n",
-    "\n",
-    "for i in range(0, 2**nqubits):\n",
-    "    bitstring = np.binary_repr(i, width=nqubits)\n",
-    "    config = [-1 if s == \"0\" else 1 for s in bitstring]\n",
-    "    f[i] = compute_config_energy(combined_hamiltonian, config)\n",
-    "\n",
-    "# Calculate mu(z_0) = sum_{\\Delta(z_0, z) = 1} \\frac{f(z) - f(z_0)}{N} for each bitstring z_0\n",
-    "mu = np.zeros(shape=(2**nqubits))\n",
-    "\n",
-    "for i in range(0, 2**nqubits):\n",
-    "    bitstring = np.binary_repr(i, width=nqubits)\n",
-    "    for j in range(0, 2**nqubits):\n",
-    "        bitstring_j = np.binary_repr(j, width=nqubits)\n",
-    "        hamming_distance = 0\n",
-    "        for char_i, char_j in zip(bitstring, bitstring_j):\n",
-    "            if char_i != char_j:\n",
-    "                hamming_distance += 1\n",
-    "        if hamming_distance == 1:\n",
-    "            mu[i] += (f[j] - f[i]) / nqubits\n",
-    "\n",
-    "f_mu = np.vstack([mu, f])\n",
-    "z = gaussian_kde(f_mu)(f_mu)\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(5.5, 5.5))\n",
-    "\n",
-    "ax.scatter(mu, f, c=z, s=40 / nqubits)\n",
-    "ax.set_xlabel(r\"$\\mu$\", fontsize=15)\n",
-    "ax.set_ylabel(r\"$f$\", fontsize=15)\n",
-    "ax.set_xlim(min(mu), max(mu))\n",
-    "ax.set_ylim(min(f), max(f))\n",
-    "\n",
-    "divider = make_axes_locatable(ax)\n",
-    "\n",
-    "ax_histx = divider.append_axes(\"top\", 1.2, pad=0.1, sharex=ax)\n",
-    "ax_histy = divider.append_axes(\"right\", 1.2, pad=0.1, sharey=ax)\n",
-    "\n",
-    "ax_histx.xaxis.set_tick_params(labelbottom=False)\n",
-    "ax_histy.yaxis.set_tick_params(labelleft=False)\n",
-    "\n",
-    "f_x_min = min(f)\n",
-    "f_x_max = max(f)\n",
-    "mu_y_min = min(mu)\n",
-    "mu_y_max = max(mu)\n",
-    "\n",
-    "ax_histx.hist(mu)\n",
-    "ax_histy.hist(f, orientation='horizontal')\n",
-    "\n",
-    "plt.show()\n"
+    "plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
    ]
   },
   {
@@ -759,53 +633,12 @@
    "outputs": [],
    "source": [
     "# Pretty Print the results of the previous Cell\n",
+    "from util.visualization import plot_counts_histogram\n",
     "\n",
     "best_config = \"000110\" # 654321\n",
     "valid_configs = [\"101010\", \"101001\", \"101011\", \"100110\", \"100101\", \"100111\", \"001010\", \"001001\", \"001011\", \"000101\", \"000111\", \"111010\", \"111001\", \"111011\", \"110110\", \"110101\", \"110111\"]\n",
     "\n",
-    "for i in range(0, 2**6):\n",
-    "    if not counts.keys().__contains__(np.binary_repr(i, 6)):\n",
-    "        counts[np.binary_repr(i, 6)] = 0\n",
-    "\n",
-    "# Sort histogram\n",
-    "sortedKeys = sorted(counts.keys())\n",
-    "sortedItems = sorted(counts.items(), key=lambda item: item[0])\n",
-    "sortedValues = [item[1] for item in sortedItems]\n",
-    "\n",
-    "print(sortedKeys)\n",
-    "print(sortedItems)\n",
-    "print(sortedValues)\n",
-    "\n",
-    "col = []\n",
-    "for key in sortedKeys:\n",
-    "    if key==best_config:\n",
-    "        col.append('r')\n",
-    "    elif valid_configs.__contains__(key):\n",
-    "        col.append(\"brown\")\n",
-    "    else:\n",
-    "        col.append('b')\n",
-    "\n",
-    "plt.rcParams[\"figure.figsize\"] = (40,10)\n",
-    "plt.ylabel(\"Count\")\n",
-    "plt.xticks(rotation=70, ha=\"right\")\n",
-    "plt.bar(sortedKeys, sortedValues, width=0.5, color=col)\n",
-    "\n",
-    "max_count = 0\n",
-    "for val in sortedValues:\n",
-    "    if val > max_count:\n",
-    "        max_count = val\n",
-    "\n",
-    "for i, val in enumerate(sortedValues):\n",
-    "    plt.text(x=i, y=val+max_count/100, s=f\"{val}\", fontdict=dict(fontsize=10), horizontalalignment=\"center\")\n",
-    "\n",
-    "plt.axhline(y=counts[best_config], color='r', linestyle='--')\n",
-    "\n",
-    "red_patch = mpatches.Patch(color='r', label=\"best config\")\n",
-    "brown_patch = mpatches.Patch(color=\"brown\", label=\"valid config\")\n",
-    "blue_patch = mpatches.Patch(color='b', label=\"invalid config\")\n",
-    "plt.legend(handles=[red_patch, brown_patch, blue_patch], loc=\"upper right\")\n",
-    "\n",
-    "plt.show()"
+    "plot_counts_histogram(counts, best_config, valid_configs)"
    ]
   }
  ],
