Fix typo and comment

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -306,9 +306,9 @@
     "\n",
     "[Glover](https://arxiv.org/abs/1811.11538) described quadratic penalties for the 2-SAT problem by treating inputs as $0/1$ values, forming a traditional constraint and then deriving a quadratic penalty. We summarize their work here:\n",
     "\n",
-    "| Clause Type | Example | Constraint | Penalty |\n",
-    "|---|---|---|---|\n",
-    "| No Negations  | $$(x_i \\vee x_j)$$               | $$x_i + x_j = 1$$            | $$(1 - x_i - x_j + x_i x_j)$$\n",
+    "| Clause Type | Example | Constraint                   | Penalty |\n",
+    "|---|---|------------------------------|---|\n",
+    "| No Negations  | $$(x_i \\vee x_j)$$               | $$x_i + x_j \\geq 1$$         | $$(1 - x_i - x_j + x_i x_j)$$\n",
     "| One Negation  | $$(x_i \\vee \\lnot{}x_j)$$        | $$x_i + (1-x_j) \\geq 1$$     | $$(x_j - x_i x_j)$$\n",
     "| Two Negations | $$(\\lnot{}x_i \\vee \\lnot{}x_j)$$ | $$(1-x_i) + (1-x_j) \\geq 1$$ | $$(x_i x_j)$$\n",
     "\n",
