Plot cost landscape (#18)
Co-authored-by: Fabian Brenneisen <fabian.brenneisen@student.kit.edu>

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -83,8 +83,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patches as mpatches\n",
     "# Notebook Setup\n",
     "from IPython.core import page\n",
     "page.page = print\n",
@@ -261,7 +259,7 @@
    "metadata": {},
    "source": [
     "### Quantum routine\n",
-    "Executes QAOA circuit an returns circuit and results"
+    "Executes QAOA circuit and returns circuit and results"
    ]
   },
   {
@@ -308,9 +306,9 @@
     "\n",
     "[Glover](https://arxiv.org/abs/1811.11538) described quadratic penalties for the 2-SAT problem by treating inputs as $0/1$ values, forming a traditional constraint and then deriving a quadratic penalty. We summarize their work here:\n",
     "\n",
-    "| Clause Type | Example | Constraint | Penalty |\n",
-    "|---|---|---|---|\n",
-    "| No Negations  | $$(x_i \\vee x_j)$$               | $$x_i + x_j = 1$$            | $$(1 - x_i - x_j + x_i x_j)$$\n",
+    "| Clause Type | Example | Constraint                   | Penalty |\n",
+    "|---|---|------------------------------|---|\n",
+    "| No Negations  | $$(x_i \\vee x_j)$$               | $$x_i + x_j \\geq 1$$         | $$(1 - x_i - x_j + x_i x_j)$$\n",
     "| One Negation  | $$(x_i \\vee \\lnot{}x_j)$$        | $$x_i + (1-x_j) \\geq 1$$     | $$(x_j - x_i x_j)$$\n",
     "| Two Negations | $$(\\lnot{}x_i \\vee \\lnot{}x_j)$$ | $$(1-x_i) + (1-x_j) \\geq 1$$ | $$(x_i x_j)$$\n",
     "\n",
@@ -455,7 +453,7 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 100 # 1e6\n",
+    "alpha_sat = 1000 # 1e6\n",
     "\n",
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
@@ -539,6 +537,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "967e6e00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
+    "# Plot cost landscape for different values of beta and gamma\n",
+    "hamiltonians = [{'hamiltonian': sat_hamiltonian, 'name': 'SAT'},\n",
+    "                {'hamiltonian': cost_model.to_quso(), 'name': 'COST'},\n",
+    "                {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
+    "strategies = ['min', 'avg', 'top']\n",
+    "plot_beta_gamma_cost_landscape(hamiltonians, strategies, 6, 0.2)\n",
+    "\n",
+    "# Plot cost landscape for different f and mu\n",
+    "plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "68097306",
    "metadata": {},
@@ -616,45 +633,12 @@
    "outputs": [],
    "source": [
     "# Pretty Print the results of the previous Cell\n",
+    "from util.visualization import plot_counts_histogram\n",
     "\n",
     "best_config = \"000110\" # 654321\n",
     "valid_configs = [\"101010\", \"101001\", \"101011\", \"100110\", \"100101\", \"100111\", \"001010\", \"001001\", \"001011\", \"000101\", \"000111\", \"111010\", \"111001\", \"111011\", \"110110\", \"110101\", \"110111\"]\n",
     "\n",
-    "# Sort histogram\n",
-    "sortedKeys = sorted(counts.keys())\n",
-    "sortedItems = sorted(counts.items(), key=lambda item: item[0])\n",
-    "sortedValues = [item[1] for item in sortedItems]\n",
-    "\n",
-    "col = []\n",
-    "for key in sortedKeys:\n",
-    "    if key==best_config:\n",
-    "        col.append('r')\n",
-    "    elif valid_configs.__contains__(key):\n",
-    "        col.append(\"brown\")\n",
-    "    else:\n",
-    "        col.append('b')\n",
-    "\n",
-    "plt.rcParams[\"figure.figsize\"] = (40,10)\n",
-    "plt.ylabel(\"Count\")\n",
-    "plt.xticks(rotation=70, ha=\"right\")\n",
-    "plt.bar(sortedKeys, sortedValues, width=0.5, color=col)\n",
-    "\n",
-    "max_count = 0\n",
-    "for val in sortedValues:\n",
-    "    if val > max_count:\n",
-    "        max_count = val\n",
-    "\n",
-    "for i, val in enumerate(sortedValues):\n",
-    "    plt.text(x=i, y=val+max_count/100, s=f\"{val}\", fontdict=dict(fontsize=10), horizontalalignment=\"center\")\n",
-    "\n",
-    "plt.axhline(y=counts[best_config], color='r', linestyle='--')\n",
-    "\n",
-    "red_patch = mpatches.Patch(color='r', label=\"best config\")\n",
-    "brown_patch = mpatches.Patch(color=\"brown\", label=\"valid config\")\n",
-    "blue_patch = mpatches.Patch(color='b', label=\"invalid config\")\n",
-    "plt.legend(handles=[red_patch, brown_patch, blue_patch], loc=\"upper right\")\n",
-    "\n",
-    "plt.show()"
+    "plot_counts_histogram(counts, best_config, valid_configs)"
    ]
   }
  ],
@@ -674,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
