Add functions for config prioritization and config deflation

--- a/configproblem/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa_mincost_sat.ipynb
@@ -640,6 +640,21 @@
     "\n",
     "plot_counts_histogram(counts, best_config, valid_configs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a16a4440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qaoa_mincost_sat import config_prioritization\n",
+    "\n",
+    "prioritized_list = config_prioritization(combined_hamiltonian, 5)\n",
+    "\n",
+    "for item in prioritized_list:\n",
+    "    print(valid_configs.__contains__(item) or item == best_config)"
+   ]
   }
  ],
  "metadata": {
